object/complexcls1/output.txt
complexcls1$ g++ 18.9.complexCls.cpp 
18.9.complexCls.cpp:56:11: error: ‘double& complexCls::operator[](int)’ cannot have default arguments
   56 |   double& operator [](const int index = 0){
      |           ^~~~~~~~
18.9.complexCls.cpp: In function ‘int main()’:
18.9.complexCls.cpp:99:8: error: no match for ‘operator[]’ (operand types are ‘complexCls’ and ‘int’)
   99 |       a[0] = 8;
      |        ^
18.9.complexCls.cpp:100:9: error: expected primary-expression before ‘]’ token
  100 |       a[] = 8;
      |         ^
18.9.complexCls.cpp:101:16: error: no match for ‘operator[]’ (operand types are ‘complexCls’ and ‘int’)
  101 |       cout << a[0] << ",  " << a[1] << endl;
      |                ^
18.9.complexCls.cpp:101:33: error: no match for ‘operator[]’ (operand types are ‘complexCls’ and ‘int’)
  101 |       cout << a[0] << ",  " << a[1] << endl;
      |                                 ^
complexcls1$ 

